# dps

./: .gitignore  CMakeLists.txt  README.md
Milestones/: Message types.md  Milestone 1.md
Truck_Platoon/: CollisionSensor.cpp  CollisionSensor.h  ForeignerTruck.cpp  ForeignerTruck.h  GPSLocation.h  Main.cpp  Platoon.h  PlatoonTruck.cpp  PlatoonTruck.h  Truck.cpp  Truck.h  TruckMessage.cpp  TruckMessage.h  Truck_Platoon.sln  Truck_Platoon.vcxproj  Truck_Platoon.vcxproj.filters
Truck_Platoon/Debug/: Truck_Platoon.exe.recipe  Truck_Platoon.ilk  Truck_Platoon.vcxproj.FileListAbsolute.txt  collisionsensor.obj.enc  vc142.idb
diagrams/editable_versions/: Analysis Class Diagram.drawio  Design Class Diagram.drawio  Role Transition Acitivty Diagram.drawio
docs/: Truck Platooning - A Distributed Peer-to-Peer Approach with TCP-IP Communication.docx
implementation/: README.md
src/: ChangeLane.cpp  ChangeLane.h  CollisionSensor.cpp  CollisionSensor.h  Follower.cpp  Follower.h  Foreigner.cpp  Foreigner.h  GPSLocation.cpp  GPSLocation.h  Leader.cpp  Leader.h  Message.cpp  Message.h  ObstacleDetection.cpp  ObstacleDetection.h  Platoon.cpp  Platoon.h  PlatoonTruck.cpp  PlatoonTruck.h  PrimeFollower.cpp  PrimeFollower.h  SpeedControl  SpeedControl.cpp  SpeedControl.h  Synchronization.cpp  Synchronization.h  Truck.cpp  Truck.h  V2VCom.cpp  V2VCom.h  main.cpp  module-info.java  utils.cpp  utils.h
src/dps/: CollisionSensor.java  GPSLocation.java  Main.java  Message.java  Truck.java  Utils.java
src/map/: GridMap.java  Location.java  TruckInfo.java
src/src/: Follower.java  (+10 more)
(+29 files in other folders)
